--- a/src/components/GridLayout.css
+++ b/src/components/GridLayout.css
@@ -1,3 +1,69 @@
+/* === BASE HEADING === */
+
+h1 {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  font-family: "Mier demi", sans-serif;
+  font-weight: 300;
+  font-size: 40px;
+  color: #080808;
+  transition: all 0.4s ease 0s;
+}
+
+h1 span {
+  display: block;
+  font-size: 0.5em;
+  line-height: 1.3;
+}
+
+h1 em {
+  font-style: normal;
+  font-weight: 600;
+}
+
+/* === HEADING STYLE #1 === */
+.one h1 {
+  text-align: center;
+
+  padding-bottom: 5px;
+}
+
+.one h1:before {
+  width: 28px;
+  height: 5px;
+  display: block;
+  content: "";
+  position: absolute;
+  bottom: 3px;
+  left: 50%;
+  margin-left: -14px;
+  background-color: #700B00;
+}
+
+.one h1:after {
+  width: 100px;
+  height: 1px;
+  display: block;
+  content: "";
+  position: relative;
+  margin-top: 25px;
+  left: 50%;
+  margin-left: -50px;
+  background-color: #700B00;
+}
+
+/* About Description Text */
+.about-description {
+  text-align: center;
+  font-size: 18px;
+  color: #555;
+  margin: 15px 0 30px;
+  font-family: "Arial", sans-serif;
+}
+
+/* === GRID LAYOUT === */
+
 .container {
   display: grid;
   grid-template-columns: repeat(2, 200px); /* Default 2 columns */
