--- a/src/pages/ContactUs.css
+++ b/src/pages/ContactUs.css
@@ -1,10 +1,20 @@
 .home-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    overflow-y: auto; /* Allow scrolling */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  overflow-y: auto;
+  gap: 20px; /* This will add space between all flex items */
+}
+
+  .reels {
+    margin-bottom: 20px; /* Adjust as needed */
   }
+  
+  .footer {
+    margin-top: 20px; /* Adjust as needed */
+  }
+  
   
   .marquee-wrapper {
     width: 100%;
